<resources>
    <string name="app_name">TukiTalki</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="create_an_account">Create an Account</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
</resources>