<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="16dp">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@mipmap/ic_launcher_round"
        android:layout_gravity="center"
        android:layout_marginVertical="32dp"
        android:layout_marginBottom="16dp" />

    <!-- Registration Title -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_an_account"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginVertical="8dp"
        android:layout_marginBottom="24dp" />

    <!-- Username EditText -->
    <EditText
        android:id="@+id/username_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:inputType="text"
        android:layout_marginVertical="8dp"
        android:layout_marginBottom="16dp" />

    <!-- Email EditText -->
    <EditText
        android:id="@+id/email_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:layout_marginVertical="8dp"
        android:layout_marginBottom="16dp" />

    <!-- Password EditText -->
    <EditText
        android:id="@+id/password_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_marginVertical="8dp"
        android:layout_marginBottom="16dp" />

    <!-- Confirm Password EditText -->
    <EditText
        android:id="@+id/confirm_password_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:layout_marginVertical="8dp"

        android:layout_marginBottom="24dp" />

    <!-- Register Button -->
    <Button
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_marginVertical="16dp"
        android:textAllCaps="false" />

    <!-- Already have an account? Login Link -->
    <TextView
        android:id="@+id/loginTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_have_an_account_login"
        android:textColor="@android:color/darker_gray"
        android:gravity="center"
        android:layout_marginTop="16dp" />

</LinearLayout>
</ScrollView>
